# NetHealth

./: 1README.md  CONTRIBUTING.md  README.md  package-lock.json  pyproject.toml
docs/: conf.py  index.rst  plugins.md
nethealth/: __init__.py  cli.py
nethealth/adapters/: console_reporter.py  network_fingerprinter.py  speed_test.py  vpn_detector.py
nethealth/core/: analyzer.py  history_manager.py
nethealth/domain/: interfaces.py
nethealth/plugins/: __init__.py
scripts/: install.ps1  install.sh
tests/: test_console_reporter.py  test_history_manager.py  test_network_analyzer.py  test_network_fingerprinter.py  test_speed_test.py
