[tool.poetry]
name = "nethealth"
version = "0.1.0"
description = "A CLI tool for analyzing network conditions"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/nethealth"
repository = "https://github.com/yourusername/nethealth"
documentation = "https://nethealth.readthedocs.io"
keywords = ["network", "monitoring", "analysis", "vpn", "speed-test"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet",
    "Topic :: System :: Networking :: Monitoring",
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
speedtest-cli = "^2.1.3"
requests = "^2.31.0"
psutil = "^5.9.6"
stem = "^1.8.2"
rich = "^13.6.0"

[tool.poetry.dev-dependencies]
black = "^23.10.0"
mypy = "^1.6.1"
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
responses = "^0.23.3"
pytest-asyncio = "^0.21.1"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
sphinx-autodoc-typehints = "^1.24.0"

[tool.poetry.scripts]
nethealth = "nethealth.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=nethealth --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["nethealth"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true